--- a/DisneyCharApp/Base.lproj/Main.storyboard
+++ b/DisneyCharApp/Base.lproj/Main.storyboard
@@ -1,24 +1,133 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="DisneyCharApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="NUd-to-djg">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G1R-hS-KdM">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="122.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DisneyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="pQO-ys-w6H">
+                                                <rect key="frame" x="0.0" y="0.0" width="103.5" height="122.5"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Character APP" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8kP-tA-A50">
+                                                <rect key="frame" x="103.5" y="0.0" width="310.5" height="122.5"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="29"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="pQO-ys-w6H" firstAttribute="leading" secondItem="G1R-hS-KdM" secondAttribute="leading" id="XJ8-mA-ofL"/>
+                                            <constraint firstItem="pQO-ys-w6H" firstAttribute="top" secondItem="G1R-hS-KdM" secondAttribute="top" id="fG2-yr-1r3"/>
+                                            <constraint firstAttribute="bottom" secondItem="pQO-ys-w6H" secondAttribute="bottom" id="pGr-aI-xDr"/>
+                                            <constraint firstItem="8kP-tA-A50" firstAttribute="leading" secondItem="pQO-ys-w6H" secondAttribute="trailing" id="yqZ-Ml-hxv"/>
+                                        </constraints>
+                                    </stackView>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uFn-pm-tLM">
+                                        <rect key="frame" x="0.0" y="122.5" width="414" height="729.5"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="pQO-ys-w6H" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.25" id="0Hp-NF-hgr"/>
+                            <constraint firstItem="NUd-to-djg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6W2-nx-ea4"/>
+                            <constraint firstItem="NUd-to-djg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Fp4-3R-gcW"/>
+                            <constraint firstItem="G1R-hS-KdM" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.15" id="ReD-O1-mUE"/>
+                            <constraint firstItem="NUd-to-djg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="cos-qa-bIE"/>
+                            <constraint firstAttribute="bottom" secondItem="NUd-to-djg" secondAttribute="bottom" id="iD8-o3-FQe"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-16" y="84"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="kks-af-FqO">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" interfaceStyle="dark" id="xTT-eD-vbB" customClass="DetailViewController" customModule="DisneyCharApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cs1-sp-AXu">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="j0c-Hu-v3s">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bWA-Oe-Bve">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="272.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mPb-Zh-tab">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="272.5"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cvV-L7-bbL">
+                                                <rect key="frame" x="337" y="236.5" width="67" height="36"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="30"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="mPb-Zh-tab" secondAttribute="trailing" id="32H-Se-B8x"/>
+                                            <constraint firstAttribute="trailing" secondItem="cvV-L7-bbL" secondAttribute="trailing" constant="10" id="9DE-ar-b2n"/>
+                                            <constraint firstAttribute="bottom" secondItem="cvV-L7-bbL" secondAttribute="bottom" id="CNG-Mz-QVp"/>
+                                            <constraint firstItem="mPb-Zh-tab" firstAttribute="top" secondItem="bWA-Oe-Bve" secondAttribute="top" id="ank-25-lS5"/>
+                                            <constraint firstItem="mPb-Zh-tab" firstAttribute="leading" secondItem="bWA-Oe-Bve" secondAttribute="leading" id="dD7-3V-Nog"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="R9U-0z-2Wg">
+                                        <rect key="frame" x="0.0" y="272.5" width="414" height="623.5"/>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="R9U-0z-2Wg" secondAttribute="bottom" id="cOB-OZ-Lh6"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Fj9-s7-y4O"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="j0c-Hu-v3s" firstAttribute="leading" secondItem="Fj9-s7-y4O" secondAttribute="leading" id="AhG-hm-IJE"/>
+                            <constraint firstItem="j0c-Hu-v3s" firstAttribute="top" secondItem="Cs1-sp-AXu" secondAttribute="top" id="LAg-fg-pzv"/>
+                            <constraint firstItem="bWA-Oe-Bve" firstAttribute="height" secondItem="Fj9-s7-y4O" secondAttribute="height" multiplier="0.33313" id="V5c-fk-kVF"/>
+                            <constraint firstAttribute="bottom" secondItem="j0c-Hu-v3s" secondAttribute="bottom" id="ilR-bH-JC9"/>
+                            <constraint firstItem="mPb-Zh-tab" firstAttribute="height" secondItem="Fj9-s7-y4O" secondAttribute="height" multiplier="1/3" id="qFW-1f-8lF"/>
+                            <constraint firstItem="Fj9-s7-y4O" firstAttribute="trailing" secondItem="j0c-Hu-v3s" secondAttribute="trailing" id="tcd-jM-lXk"/>
+                        </constraints>
+                    </view>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HJZ-3I-Kmu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1011.5942028985507" y="83.705357142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="DisneyLogo" width="63.333332061767578" height="26.666666030883789"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
