--- a/DisneyCharApp/Views/CharacterViewCell.xib
+++ b/DisneyCharApp/Views/CharacterViewCell.xib
@@ -32,7 +32,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="Label" destination="8BN-ry-Wba" id="Au4-tc-gHW"/>
+                <outlet property="name" destination="8BN-ry-Wba" id="rr6-YI-OZW"/>
             </connections>
             <point key="canvasLocation" x="132" y="98"/>
         </tableViewCell>
